[gd_scene load_steps=9 format=3 uid="uid://bcpqqvj8ar2jt"]

[ext_resource type="Script" path="res://addons/godotWad/scenes/guns/stateGuns/stateGun.gd" id="1_tmvns"]
[ext_resource type="Texture2D" uid="uid://cqmtl7lxyc7tb" path="res://addons/godotWad/sprites/bulletImpact.png" id="2_6vtuu"]
[ext_resource type="PackedScene" uid="uid://br07pau6iijsu" path="res://addons/godotWad/scenes/quad3Dsprite.tscn" id="3_a40uq"]
[ext_resource type="Script" path="res://addons/godotWad/scenes/guns/template/gunSounds.gd" id="4_lgsru"]
[ext_resource type="Script" path="res://addons/godotWad/scenes/guns/stateGuns/stateGunGenerator.gd" id="5_nb4n6"]

[sub_resource type="QuadMesh" id="QuadMesh_6lui4"]

[sub_resource type="QuadMesh" id="QuadMesh_usl84"]

[sub_resource type="SphereShape3D" id="SphereShape3D_s7brj"]
radius = 20.0

[node name="stateGun" type="Node3D"]
script = ExtResource("1_tmvns")
bulletImpactTexture = ExtResource("2_6vtuu")
holsterY = null
worldSpriteName = null
shootStateID = 1

[node name="AnimatedSprite3D" parent="." instance=ExtResource("3_a40uq")]
mesh = SubResource("QuadMesh_6lui4")

[node name="muzzleFlash" parent="." instance=ExtResource("3_a40uq")]
visible = false
mesh = SubResource("QuadMesh_usl84")

[node name="shootCast" type="RayCast3D" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
script = ExtResource("4_lgsru")

[node name="Generator" type="Node" parent="."]
script = ExtResource("5_nb4n6")
spriteList = Array[String](["PISGA0", "PISGB0", "PISGC0"])
fireSounds = Array[String](["DSPISTOL"])
entityDepends = PackedStringArray()

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
callback_mode_method = 1

[node name="soundAlert" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="soundAlert"]
shape = SubResource("SphereShape3D_s7brj")
